[package]
name = "marzban_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
trust-dns-resolver = "*"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15"
prometheus = "0.13.4"
axum = "0.7.5"

openssl = { version = "0.10.66", features = ["vendored"] }
